Fix overflow on home page, nav bar

--- a/_sass/minima/_home.scss
+++ b/_sass/minima/_home.scss
@@ -14,19 +14,22 @@
     position: relative;
     background-color: $brand-color;
     text-align: center;
+    min-height: 500px;
     height: 90vh;
     z-index: 1;
 }
 
 #logo-wrapper {
     position: relative;
-    top: 5vh;
-    min-width: 100px;
+    top: 20px;
     width: 100%;
+    min-height: 350px;
+    height: 50vh;
 }
 .logo {
     position: absolute;
-    top: 0; left: 0;
+    display: block;
+    margin: 0 auto;
 }
 
 #full-logo {
@@ -48,14 +51,13 @@
 
 #site-descrip {
     position: relative;
-    top: 45vh;
     font-size: large;
 }
 
 #learn-more {
     display: block;
     position: relative;
-    top: 5vh;
+    top: 35px;
     width: 100px;
     padding: 15px;
     margin: 0 auto;
